@@ -65,7 +65,7 @@ void    exchange_hierarchy_webdav_offline_scan_subtree (ExchangeHierarchy *hier,
 							ExchangeHierarchyWebDAVScanCallback cb,
 							gpointer user_data);
 
-ExchangeFolderSize * exchange_hierarchy_get_folder_size (ExchangeHierarchyWebDAV *hwd);
+ExchangeFolderSize * exchange_hierarchy_webdav_get_folder_size (ExchangeHierarchyWebDAV *hwd);
 
 
 
